<resources>
    <string name="app_name">FarmNet</string>
    <string name="title_home">首页</string>
    <string name="title_service">服务</string>
    <string name="title_capacity">智能</string>
    <string name="title_my">我的</string>
    <string name="authentication">验证身份</string>
    <string name="hint_one">我们已经发送一条短信验证码至&#160;</string>
    <string name="str_get_code_two">重新获取（60s）</string>
    <string name="str_welcome">欢迎使用FARMNET</string>
    <string name="str_phone">请输入手机号</string>
    <string name="str_login">登录</string>
    <string name="str_weixin">微信</string>
    <string name="str_qq">QQ</string>
    <string name="str_pwd_login">密码登录</string>
    <string name="str_pwd">请设置登录密码</string>
    <string name="str_forget_pwd">忘记密码？</string>
    <string name="str_register_account">注册新账号</string>
    <string name="str_set_pwd">设置密码</string>
    <string name="str_hint_two">首次使用请设置密码，至少6位，包含数字和字母</string>
    <string name="str_set_login_pwd">请设置登录密码</string>
    <string name="str_register">注册</string>
    <string name="str_hint_three">点击“注册”，表示已阅读并同意以下协议</string>
    <string name="str_hint_four">《软件许可及用户服务协议》</string>
    <string name="str_hint_five">《用户隐私条款》</string>
    <string name="str_reset_pwd">重置密码</string>
    <string name="str_name">昵称</string>
    <string name="str_name_value">智棚物联网</string>
    <string name="str_bind_phone">绑定手机</string>
    <string name="str_bind_account">绑定设定账号</string>
    <string name="str_change_pwd">修改密码</string>
    <string name="str_help_center">帮助中心</string>
    <string name="str_china_english">中英文切换</string>
    <string name="str_exit_login">退出登录</string>
    <string name="str_new_information">新建个人信息</string>
    <string name="str_save">保存</string>
    <string name="str_icon_and_name">随机头像和昵称</string>
    <string name="str_head">头像</string>
    <string name="str_environment_control">环境控制</string>
    <string name="str_off_line">离线</string>
    <string name="str_on_line">在线</string>
    <string name="str_txt_type">正在加温</string>
    <string name="str_other_login">其他方式登录</string>
    <string name="str_next">下一步</string>
    <string name="str_please">邀请</string>
    <string name="str_register_new">注册新账号</string>
    <string name="str_account">请输入用户名</string>
    <string name="str_pwd_again">请再次确认密码</string>
    <string name="str_add_farm">添加农场</string>
    <string name="str_ok">确认</string>
    <string name="str_farm_name">请输入农场名称</string>
    <string name="str_farm_site">请点击选择农场地址</string>
    <string name="str_remark">请添加一个备注</string>
    <string name="str_sure">确定</string>
    <string name="str_add_unit">添加单元</string>
    <string name="str_address">请输入具体门牌号</string>
    <string name="selset_birthday">请选择</string>
    <string name="select_address_pop_title">所在地区</string>
    <string name="str_location">位置信息</string>
    <string name="str_ok_select">确认选择</string>
    <string name="str_PTZ_control">云台控制</string>
    <string name="str_list">列表显示</string>
    <string name="str_PTZ_control_n">云台&#x000A;控制</string>
    <string name="str_suspension">悬浮</string>
    <string name="str_control">控制</string>
    <string name="str_talk_back">对讲</string>
    <string name="str_camera">拍照</string>
    <string name="str_current_alarm">当前报警</string>
    <string name="str_historical_alarm">历史报警</string>
    <string name="str_user_name">请输入用户名</string>
    <string name="tvBack">请注意查收</string>
    <string name="str_in_code">请输入验证码</string>
    <string name="str_get_code">重新获取</string>
    <string name="str_import_phone">请输入您注册或绑定的手机号</string>
    <string name="str_long01">账号或者密码错误</string>
    <string name="str_long02">请输入手机号码</string>
    <string name="str_long03">验证码已发送</string>
    <string name="str_long04">验证码错误</string>
    <string name="str_long05">用户已存在</string>
    <string name="str_long06">已经发送过短信了</string>
    <string name="str_long07">验证码已超时</string>
    <string name="str_long08">请求网络失败</string>
    <string name="str_long09">手机号不正确</string>
    <string name="str_long10">请输入六位的验证码</string>
    <string name="str_long11">请稍后...</string>
    <string name="str_long12">密码不能为空</string>
    <string name="str_long13">用户名不能为空</string>
    <string name="str_long14">请输入正确的手机号</string>
    <string name="str_set_pwd_two">重置密码</string>
    <string name="str_long15">请再次确认密码</string>
    <string name="str_long16">请重置登录密码</string>
    <string name="str_long17">账号不存在</string>
    <string name="str_long18">请输入登录密码</string>
    <string name="str_long19">请确认登录密码</string>
    <string name="str_long20">两次密码输入不一致</string>
    <string name="str_long21">密码重置成功，请重新登录</string>
    <string name="str_long22">首字母必须为英文字母</string>
    <string name="str_long23">账号注册成功，请进行登录</string>
    <string name="str_long24">密码设置成功，已为您直接登录</string>

</resources>
