<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg_other"
    tools:context=".ui.activity.PWDSettingActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/back_size"
        android:layout_height="@dimen/back_size"
        android:padding="25px"
        tools:ignore="PxUsage"
        android:src="@drawable/ic_chevron_left_black_24dp" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_marginStart="@dimen/mar_size"
        android:layout_marginTop="60px"
        android:text="@string/str_set_pwd"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="130px"
        android:layout_below="@+id/tvWelcome"
        android:layout_marginStart="@dimen/mar_size"
        android:layout_marginTop="200px"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_small_size"
        android:text="@string/str_hint_two"
        android:textColor="@color/black"
        tools:ignore="PxUsage" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:layout_below="@+id/etPhone"
        android:layout_marginEnd="@dimen/mar_size"
        android:layout_marginStart="@dimen/mar_size"
        android:hint="@string/str_set_login_pwd"
        android:inputType="textPassword"
        android:maxLength="16"
        android:background="@null"
        android:layout_toStartOf="@+id/imgEye"
        android:textCursorDrawable="@drawable/cursor_size_black"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        tools:ignore="PxUsage" />

    <ImageView
        android:id="@+id/imgEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhone"
        android:layout_marginEnd="@dimen/mar_size"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/ic_eye_close"
        android:padding="48px"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/etPass"
        android:layout_marginStart="@dimen/mar_size"
        android:layout_marginEnd="@dimen/mar_size"
        android:background="@color/line_bg" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="109px"
        android:layout_below="@id/etPass"
        android:layout_marginStart="@dimen/mar_size"
        android:layout_marginEnd="@dimen/mar_size"
        android:layout_marginTop="@dimen/margin_top_size_btn"
        android:background="@drawable/login_click_effect_in"
        android:text="@string/str_login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal_size"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/tvCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63px"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_small_size"
        android:text="@string/str_hint_three"
        android:textColor="@color/black"
        tools:ignore="PxUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCenter"
        android:gravity="center"
        android:layout_marginTop="62px"
        android:orientation="horizontal"
        tools:ignore="PxUsage">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_hint_four"
            android:textColor="#277afe"
            android:textSize="@dimen/text_small_size"
            android:padding="10px"
            tools:ignore="PxUsage" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mar_size"
            android:text="@string/str_hint_five"
            android:textColor="#277afe"
            android:textSize="@dimen/text_small_size"
            android:padding="10px"
            tools:ignore="PxUsage" />
    </LinearLayout>
</RelativeLayout>