<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".ui.activity.PersonalInformationActivity">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/back_size"
        android:background="@color/white"
        android:orientation="horizontal"
        tools:ignore="PxUsage">

        <ImageView
            android:id="@+id/back"
            android:layout_width="120px"
            android:layout_height="120px"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:padding="25px"
            tools:ignore="PxUsage"
            />

        <TextView
            android:id="@+id/tvPassLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/str_new_information"
            android:textSize="@dimen/text_normal_size"
            android:textStyle="bold" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:background="@color/white"
        android:paddingStart="@dimen/mar_size"
        tools:ignore="PxUsage,RtlSymmetry">


        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/str_head"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="156px"
            android:layout_height="156px"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="40px"
            android:layout_marginEnd="100px"
            android:layout_marginBottom="40px"
            android:background="@drawable/img_back" />

        <ImageView
            android:layout_width="15px"
            android:layout_height="25px"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/mar_size"
            android:background="@drawable/list_arrow_right"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/mar_size"
        android:background="@color/gray_line"
        tools:ignore="PxUsage" />

    <RelativeLayout
        android:id="@+id/rlTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="@dimen/mar_size"
        tools:ignore="PxUsage,RtlSymmetry">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="98px"
            android:layout_marginBottom="98px"
            android:text="@string/str_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal_size" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/mar_size"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20px"
        android:layout_marginEnd="18px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20px"
        tools:ignore="PxUsage,RtlHardcoded">

        <ImageView
            android:layout_width="40px"
            android:layout_height="40px"
            android:src="@drawable/ic_help_center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:textSize="@dimen/text_s_small_size"
            android:text="@string/str_icon_and_name" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="109px"
        android:layout_marginLeft="@dimen/mar_size"
        android:layout_marginTop="165px"
        android:layout_marginRight="@dimen/mar_size"
        android:background="@drawable/login_click_effect_in"
        android:text="@string/str_save"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal_size"
        tools:ignore="PxUsage" />
</LinearLayout>