<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SettingPWDActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/back_size"
        android:layout_height="@dimen/back_size"
        android:src="@drawable/ic_chevron_left_black_24dp"
        android:padding="25px"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_marginStart="@dimen/mar_size"
        android:layout_marginTop="60px"
        android:text="@string/str_set_pwd"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold"
        tools:ignore="PxUsage" />


    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:layout_below="@+id/tvWelcome"
        android:layout_marginTop="330px"
        android:layout_marginStart="@dimen/mar_size"
        android:layout_marginEnd="@dimen/mar_size"
        android:background="@null"
        android:hint="@string/str_set_login_pwd"
        android:inputType="textPassword"
        android:maxLength="16"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:layout_toStartOf="@+id/imgEye"
        android:textCursorDrawable="@drawable/cursor_size_black"
        tools:ignore="PxUsage" />

    <ImageView
        android:id="@+id/imgEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWelcome"
        android:layout_marginTop="330px"
        android:layout_marginEnd="@dimen/mar_size"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:padding="48px"
        android:src="@drawable/ic_eye_open"
        tools:ignore="PxUsage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/etPass"
        android:layout_marginStart="@dimen/mar_size"
        android:layout_marginEnd="@dimen/mar_size"
        android:background="@color/line_bg" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="109px"
        android:layout_below="@id/etPass"
        android:layout_marginStart="@dimen/mar_size"
        android:layout_marginTop="@dimen/margin_top_size_btn"
        android:layout_marginEnd="@dimen/mar_size"
        android:background="@drawable/login_click_effect_in"
        android:text="@string/str_reset_pwd"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal_size"
        tools:ignore="PxUsage" />


</RelativeLayout>