<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="18px"
    android:layout_marginBottom="18px"
    android:minHeight="303px"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    tools:ignore="PxUsage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26px"
        >

        <TextView
            android:id="@+id/tvTile"
            android:layout_width="wrap_content"
            android:layout_height="69px"
            android:textSize="36px"
            android:gravity="bottom"
            android:textColor="@color/text_back_blue"
            tools:text="Testing" />

        <TextView
            android:layout_marginTop="26px"
            android:id="@+id/tvBg"
            android:layout_toEndOf="@+id/tvTile"
            android:layout_width="2px"
            android:layout_height="39px"
            android:layout_marginStart="10px"
            android:background="@color/bg_line"
            />
        <TextView
            android:id="@+id/tvSTitle"
            android:layout_toEndOf="@+id/tvBg"
            android:layout_width="wrap_content"
            android:layout_height="69px"
            android:textSize="22px"
            android:text="@string/str_environment_control"
            android:layout_marginStart="9px"
            android:gravity="bottom"
            android:textColor="@color/bg_line"
            />

        <ImageView
            android:id="@+id/imgType"
            android:layout_width="12px"
            android:layout_height="12px"
            android:background="@drawable/bg_green"
            android:layout_marginStart="13px"
            android:layout_marginTop="21px"
            android:layout_below="@+id/tvTile"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="42px"
            android:text="@string/str_on_line"
            android:textColor="@color/bg_txt_color"
            android:layout_below="@+id/tvTile"
            android:gravity="bottom"
            android:textSize="22px"
            android:layout_marginStart="15px"
            android:layout_toEndOf="@+id/imgType"
            />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22px"
            android:layout_below="@+id/llCenter"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="22px"
            android:text="@string/str_txt_type"
            android:textColor="@color/bg_txt_color"
            />

        <LinearLayout
            android:id="@+id/llCenter"
            android:layout_width="wrap_content"
            android:layout_marginEnd="42px"
            android:layout_below="@+id/tvTile"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:layout_height="194px">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgIcon"
                android:background="@drawable/ic_environment"
                />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>